--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.13.3",
     "nunjucks": "^2.1.0",
+    "page": "^1.6.4",
     "redux": "^3.0.2",
     "riot": "^2.2.4"
   },
@@ -19,14 +20,7 @@
     "babelify": "^6.3.0",
     "browserify": "^11.2.0",
     "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-riot": "^0.3.1",
-    "gulp-sequence": "^0.4.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.4.2",
-    "jquery": "^2.1.4",
     "riotify": "^0.1.2",
-    "run-sequence": "^1.1.4",
     "vinyl-source-stream": "^1.1.0"
   }
 }
